--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     --linear-botes: linear-gradient(180deg, #B872FF 0%, #144480 100%);
 }
 
+.teste {
+    background-color: red;
+}
+
 [data-contexto="foco"] {
     --main-bg-color: linear-gradient(180deg, #8B1FF8 0%, #041832 48.44%, #01080E 100%);
 }
